about page anchor

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -72,6 +72,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 body, html{
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   background-color: #fff;
 }
