--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -64,12 +64,14 @@ body {
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "microsoft yahei",'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: 微软雅黑, Arial, sans-serif;
 }
 body, html{
   /* scroll-behavior: smooth; */
